--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "dependencies": {
     "lodash": "^4.17.15",
+    "swiper": "^6.5.9",
     "vue": "^2.6.11",
+    "vue2-swiper": "0.0.13",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   },
