--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lodash": "^4.17.15",
     "swiper": "^6.5.9",
     "vue": "^2.6.11",
+    "vue-loading-overlay": "^4.0.2",
     "vue2-swiper": "0.0.13",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
